--- a/images/octavia/Dockerfile
+++ b/images/octavia/Dockerfile
@@ -3,11 +3,15 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-ADD --keep-git-dir=true https://opendev.org/openstack/octavia.git#zed-eol /src/octavia
+# renovate: name=openstack/octavia repo=https://opendev.org/openstack/octavia.git branch=zed-eol
+ARG OCTAVIA_GIT_REF=zed-eol
+ADD --keep-git-dir=true https://opendev.org/openstack/octavia.git#${OCTAVIA_GIT_REF} /src/octavia
 RUN git -C /src/octavia fetch --unshallow
 COPY patches/octavia /patches/octavia
 RUN git -C /src/octavia apply --verbose /patches/octavia/*
-ADD --keep-git-dir=true https://opendev.org/openstack/ovn-octavia-provider.git#zed-eol /src/ovn-octavia-provider
+# renovate: name=openstack/ovn-octavia-provider repo=https://opendev.org/openstack/ovn-octavia-provider.git branch=zed-eol
+ARG OVN_OCTAVIA_PROVIDER_GIT_REF=zed-eol
+ADD --keep-git-dir=true https://opendev.org/openstack/ovn-octavia-provider.git#${OVN_OCTAVIA_PROVIDER_GIT_REF} /src/ovn-octavia-provider
 RUN git -C /src/ovn-octavia-provider fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
