--- a/images/heat/Dockerfile
+++ b/images/heat/Dockerfile
@@ -3,6 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
+# renovate: name=openstack/heat repo=https://opendev.org/openstack/heat.git branch=unmaintained/2023.1
 ARG HEAT_GIT_REF=362bd38d902e006b50caf86f46581dfd16f7adab
 ADD --keep-git-dir=true https://opendev.org/openstack/heat.git#${HEAT_GIT_REF} /src/heat
 RUN git -C /src/heat fetch --unshallow
