Switch to Renovate for Git commits
Skip-Release-Notes

Change-Id: Ic7c390f944391eba2377966c6ada360d4cd68bd4

--- a/images/heat/Dockerfile
+++ b/images/heat/Dockerfile
@@ -3,6 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
+# renovate: name=openstack/heat repo=https://opendev.org/openstack/heat.git branch=stable/2024.1
 ARG HEAT_GIT_REF=512052a0553cc3661aa850542a13466b07a0c5c6
 ADD --keep-git-dir=true https://opendev.org/openstack/heat.git#${HEAT_GIT_REF} /src/heat
 RUN git -C /src/heat fetch --unshallow
