--- a/images/ironic/Dockerfile
+++ b/images/ironic/Dockerfile
@@ -3,6 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
+# renovate: name=openstack/ironic repo=https://opendev.org/openstack/ironic.git branch=stable/2024.1
 ARG IRONIC_GIT_REF=19de7ae2f48705cfa0e59d0642cec3cca7b6ca22
 ADD --keep-git-dir=true https://opendev.org/openstack/ironic.git#${IRONIC_GIT_REF} /src/ironic
 RUN git -C /src/ironic fetch --unshallow
