--- a/images/placement/Dockerfile
+++ b/images/placement/Dockerfile
@@ -3,6 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
+# renovate: name=openstack/placement repo=https://opendev.org/openstack/placement.git branch=stable/2024.1
 ARG PLACEMENT_GIT_REF=af00c864e98ae76cae3e621ad95868234d027882
 ADD --keep-git-dir=true https://opendev.org/openstack/placement.git#${PLACEMENT_GIT_REF} /src/placement
 RUN git -C /src/placement fetch --unshallow
