Add exception for Tempest
Change-Id: If9659e2c220b4cb7eb10cf52eb06f35e6a3e9d59

--- a/renovate.json
+++ b/renovate.json
@@ -34,6 +34,7 @@
     {
       "matchDatasources": ["git-refs"],
       "matchPackageNames": ["https://opendev.org/openstack/**"],
+      "matchFileNames": ["!images/tempest/Dockerfile"],
       "groupName": "openstack"
     }
   ],
