--- a/charts/octavia/values.yaml
+++ b/charts/octavia/values.yaml
@@ -51,6 +51,7 @@ images:
     dep_check: quay.io/airshipit/kubernetes-entrypoint:latest-ubuntu_focal
     image_repo_sync: docker.io/docker:17.07.0
     octavia_api: docker.io/loci/octavia:master-ubuntu
+    octavia_driver_agent: docker.io/loci/octavia:master-ubuntu
     octavia_worker: docker.io/loci/octavia:master-ubuntu
     octavia_housekeeping: docker.io/loci/octavia:master-ubuntu
     octavia_health_manager: docker.io/loci/octavia:master-ubuntu
@@ -220,6 +221,9 @@ conf:
   octavia:
     DEFAULT:
       log_config_append: /etc/octavia/logging.conf
+    ovn:
+      ovn_nb_connection: unix:/run/ovn/ovnnb_db.sock
+      ovn_sb_connection: unix:/run/ovn/ovnsb_db.sock
     api_settings:
       api_handler: queue_producer
       bind_host: 0.0.0.0
@@ -586,9 +590,25 @@ pod:
     octavia_worker: null
     bootstrap: null
     db_sync: null
-  user:
-    octavia:
-      uid: 42424
+  security_context:
+    octavia_api:
+      container:
+        octavia_api:
+          capabilities:
+            add:
+              - SYS_NICE
+        octavia_driver_agent:
+          capabilities:
+            add:
+              - SYS_NICE
+    octavia_worker:
+      container:
+        octavia_worker:
+          runAsUser: 42424
+    octavia_housekeeping:
+      container:
+        octavia_housekeeping:
+          runAsUser: 42424
   affinity:
     anti:
       type:
@@ -599,6 +619,9 @@ pod:
     octavia_api:
       init_container: null
       octavia_api:
+        volumeMounts:
+        volumes:
+      octavia_driver_agent:
         volumeMounts:
         volumes:
     octavia_worker:
@@ -648,6 +671,13 @@ pod:
   resources:
     enabled: false
     api:
+      requests:
+        memory: "128Mi"
+        cpu: "100m"
+      limits:
+        memory: "1024Mi"
+        cpu: "2000m"
+    driver_agent:
       requests:
         memory: "128Mi"
         cpu: "100m"
